--- a/app/src/main/res/layout/notes_layout.xml
+++ b/app/src/main/res/layout/notes_layout.xml
@@ -13,6 +13,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/button_round_corners"
         android:padding="10dp">
 
         <TextView
